# htc

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: MEMORY.md  PROVIDERS.md  loop-architecture.md  product-spec-v0.2.md  spec.md
src/htc/: __init__.py  cli.py  errors_tracking.py  history.py  llm.py  sandbox.py  telemetry.py
src/htc/adapters/: __init__.py  base.py  filesystem.py
src/htc/evaluation/: __init__.py  runner.py  scorecard.py
src/htc/goldens/: __init__.py  generator.py
src/htc/handbook/: __init__.py  generator.py
src/htc/onboard/: __init__.py  writer.py
src/htc/study/: __init__.py  bank.py  grading.py  model.py  run.py  stats.py
src/htc/twin/: __init__.py  mcp_server.py  server.py
src/htc/world_model/: __init__.py  build.py  fusion.py  retrieval.py
src/htc/world_model/graph/: __init__.py  extract.py  graph.py  model.py
src/htc/world_model/ingest/: __init__.py  chunker.py  contextual.py  corpus.py  extractors.py  model.py
src/htc/world_model/maintain/: __init__.py  dedup.py  refresh.py  staleness.py  state.py
src/htc/world_model/memory/: __init__.py  (+5 more)
tests/: conftest.py  test_agentic.py  test_cli.py  test_contextual.py  test_fusion.py  test_goldens.py  test_graph.py  test_handbook.py  test_ingest.py  test_llm_providers.py  test_maintain.py  test_memory.py  test_memory_hybrid.py  test_query.py  test_render.py  test_rerank.py  test_retrieval.py  test_runner.py  test_sandbox.py  test_scorecard.py  test_secrets.py  test_study.py  test_synthesis.py  test_tracking.py  test_twin_safety.py  test_wiki.py
(+16 files in other folders)
