[project]
name = "htc"
version = "0.2.0"
description = "Hyperbolic Time Chamber — onboard AI agents to your company in an afternoon: measure what they don't know, generate the fix, train them native."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Norevel LLC" }]
dependencies = [
    "mcp>=1.2.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
# RL chamber (heavy) — install when training, not just for measure/fix.
rl = ["openpipe-art"]
# Multi-format doc ingestion (PDF/DOCX/PPTX/XLSX) — core stays dependency-light.
ingest = ["pypdf>=4", "python-docx>=1", "python-pptx>=0.6", "openpyxl>=3"]
# Local semantic embeddings (BAAI/bge-small-en-v1.5 via fastembed, CPU, no
# network) — the offline FALLBACK embedder for the local memory backend when
# neither Ollama (recommended default) nor a cloud endpoint is available.
embed = ["fastembed>=0.3", "keyring>=24"]
# Sentry error tracking — opt-in via HTC_SENTRY_DSN, not installed by default.
telemetry = ["sentry-sdk>=2"]
dev = ["pytest>=8", "ruff>=0.5", "black>=24"]

[project.scripts]
htc = "htc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/htc"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py311"
